[package]
name = "an_editor"
version = "0.1.0"
authors = ["Vlad Shcherbina <vlad.shcherbina@gmail.com>"]
edition = "2018"

[dependencies]
backtrace = "*"

[dependencies.winapi]
version = "*"
features = ["debug", "winbase", "winuser", "errhandlingapi", "libloaderapi", "d2d1", "windowsx"]

[profile.release]
debug = true
