[package]
name = "an_editor"
version = "0.1.0"
authors = ["Vlad Shcherbina <vlad.shcherbina@gmail.com>"]
edition = "2018"

[dependencies]
backtrace = "*"
log = "*"
env_logger = { version = "*", default-features = false, features = ["termcolor", "atty", "humantime"]}

[dependencies.winapi]
version = "*"
features = [
    "debug",
    "winbase",
    "winuser",
    "libloaderapi",
    "d2d1",
    "windowsx",
    "commdlg",
]

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"
lto = true
